style issue fixed

--- a/home/static/style/main.css
+++ b/home/static/style/main.css
@@ -146,11 +146,11 @@ input[type="text"]::placeholder {
 /**/
   #title{
     display: block;
-    color:  #1a1a1a;;
+    color:  #1a1a1a;
     font-size: 18px;
     line-height: 26px;
     font-weight: 600;
     margin-top: 20px;
     margin-bottom:0px;
-    font-family: -apple-system,BlinkMacSystemFont,segoe ui,roboto,oxygen,cantarell,helvetica neue,ubuntu,sans-serif;
+    font-family:apple-system,BlinkMacSystemFont,segoe ui,roboto,oxygen,cantarell,helvetica neue,ubuntu,sans-serif;
   }
