--- a/home/static/style/main.css
+++ b/home/static/style/main.css
@@ -19,6 +19,23 @@ body,html{
     position:fixed;
     top: 0%;
 }
+
+#join{
+  float:right;
+  width: 100px;
+  height:40px;
+  background-color: #05a081;
+  border-radius: 2px;
+  font-weight: 600;
+  color: white;
+  position: relative;
+  top: 5px;
+  bottom: 5px;
+  right: 20px;
+
+
+}
+
   /*hero image*/
   .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/assets/hero.jpg");
@@ -118,32 +135,36 @@ input[type="text"]::placeholder {
     margin-left: 50px;
     margin-right: 50px;
   }
+  /*grid item position and size*/
 /*.item1 { grid-area: 1 / 3 / 2 / 4; }
   .item2 { grid-area: 2 / 3 / 3 / 4; }
   .item3 { grid-area: 1 / 1 / 2 / 2; }
   .item4 { grid-area: 1 / 2 / 2 / 3; }
   .item5 { grid-area: 2 / 1 / 3 / 2; }
   .item6 { grid-area: 2 / 2 / 3 / 3; }*/ 
-  
+  /*images in grid item*/
   .grid-container img{
       width: 450px;
       height: 600px;
   }
+  /*hovering images in grid item*/
   .grid-container img:hover{
     opacity:0.9
 }
+/*videos in grid item*/
 .grid-container video{
     width: 450px;
     height: 600px;
 }
-/**/
+/*title under nav tab*/
   .title-tab{
-    width: 100%;
+    width: 50%;
     height: 0px;
     margin-left: 60px;
     margin-right: 60px;
+    float: left;
   }
-/**/
+/*h3 title*/
   #title{
     display: block;
     color:  #1a1a1a;
@@ -153,4 +174,34 @@ input[type="text"]::placeholder {
     margin-top: 20px;
     margin-bottom:0px;
     font-family:apple-system,BlinkMacSystemFont,segoe ui,roboto,oxygen,cantarell,helvetica neue,ubuntu,sans-serif;
+  }
+  .dropdown{
+    height: auto;
+    position: relative;
+    right: 100px;
+    display: inline-block;
+  }
+  .dropdown-content{
+    display: none;
+  position: absolute;
+  right:0px;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .drop-down-div{
+    float: right;
+  }
+  .title-tab-container{
+    width: 100%;
+    height: 50px;
+  }
+  .dropdown-content a{
+    text-decoration: none;
+    color: #1a1a1a;
   }
