--- a/home/static/style/main.css
+++ b/home/static/style/main.css
@@ -1,207 +1,105 @@
 /**/
-body,html{
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    overflow-x:hidden;
-  }
-  /*navbar logo*/
-  #logo{
-      margin-left:10px ;
-      width: 45px;
-      height: 40px;
-      margin-top: 5px;
-  }
-  /*navbar inside hero*/
-.nav{
-    width:100%;
-    height: 50px;
-    background: rgba(0, 0, 0, 0.5);
-    position:fixed;
-    top: 0%;
-}
+body,
+html {
+  margin: 0px;
+  padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box; }
 
-#join{
-  float:right;
-  width: 100px;
-  height:40px;
-  background-color: #05a081;
-  border-radius: 2px;
+/*navbar logo*/
+#logo {
+  margin-left: 10px;
+  width: 45px;
+  height: 40px;
+  margin-top: 5px; }
+
+/*navbar inside hero*/
+.nav {
+  width: 100%;
+  height: 75px;
+  background: #fff;
+  position: fixed;
+  top: 0%; }
+
+.nav1 {
+  width: 100%;
+  height: 75px;
+  background: transparent;
+  position: fixed;
+  top: 0%; }
+
+.join-button1 {
+  float: right;
+  width: 70px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 5px;
   font-weight: 600;
   color: white;
   position: relative;
   top: 5px;
-  bottom: 5px;
-  right: 20px;
+  margin: 10px;
+  font-size: 14px;
+  color: black; }
 
+.join-button {
+  float: right;
+  width: 70px;
+  height: 50px;
+  background-color: #05a081;
+  border-radius: 5px;
+  font-weight: 600;
+  color: white;
+  position: relative;
+  top: 5px;
+  margin: 10px;
+  font-size: 14px;
+  border: none; }
 
-}
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/assets/hero.jpg");
+  width: 100%;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative; }
 
-  /*hero image*/
-  .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/assets/hero.jpg");
-    width: 100%;
-    height: 500px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  /*text inside hero*/
-  .hero-text {
-    text-align: justify;
-    display: block;
-    font-weight: 700;
-    line-height: 48px;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    display: block;
-    font-size: 36px;
-    margin-top: 0;
-    margin-bottom: 15px;
-    
-  }
-  /*searchbox inside hero*/
-  input[type=text]{
-    border-radius: 10px;
-    outline: 0px;
-    width: 75%;
-    height: 55px;
-    font-size:20px;
-    padding-left: 25px;
-    color:#1a1a1a;
-}
-input[type="text"]::placeholder {  
-                  
-    /* Firefox, Chrome, Opera */ 
-    
-    font-size: 20px;
-} 
-  /*search button*/
-  .hero-image button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 10px 25px;
-    color: black;
-    background-color: #ddd;
-    text-align: center;
-    cursor: pointer;
-    height: 60px;
-    border-radius: 10px;
-  }
-  /**/
-  .hero-image button:hover {
-    background-color: #05a081;
-    color: white;
-  }
-
-
-/**/ 
-.nav-tabs {
-    overflow: hidden;
-    background-color: #f1f1f1;
-    margin-left: 30%;
-    margin-top: 50px;
-  }
-/*tab navbar under hero*/
-.tabs {
-    display: inline;
-    color: rgb(58, 57, 57);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    border-bottom: 3px solid transparent;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size:larger;
-  }
-/*tabs hover*/
- .tabs:hover{
-     color: #0064f9 ;
- }
-
-/*grid container box*/
- .grid-container {
+@media screen and (max-width: 375px) {
+  .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 20px;
-    background-color:none;
-    padding: 10px;
-    margin-top: 20px;
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-  /*grid item position and size*/
-/*.item1 { grid-area: 1 / 3 / 2 / 4; }
-  .item2 { grid-area: 2 / 3 / 3 / 4; }
-  .item3 { grid-area: 1 / 1 / 2 / 2; }
-  .item4 { grid-area: 1 / 2 / 2 / 3; }
-  .item5 { grid-area: 2 / 1 / 3 / 2; }
-  .item6 { grid-area: 2 / 2 / 3 / 3; }*/ 
-  /*images in grid item*/
-  .grid-container img{
-      width: 450px;
-      height: 600px;
-  }
-  /*hovering images in grid item*/
-  .grid-container img:hover{
-    opacity:0.9
-}
-/*videos in grid item*/
-.grid-container video{
-    width: 450px;
-    height: 600px;
-}
-/*title under nav tab*/
-  .title-tab{
-    width: 50%;
-    height: 0px;
-    margin-left: 60px;
-    margin-right: 60px;
-    float: left;
-  }
-/*h3 title*/
-  #title{
-    display: block;
-    color:  #1a1a1a;
-    font-size: 18px;
-    line-height: 26px;
-    font-weight: 600;
-    margin-top: 20px;
-    margin-bottom:0px;
-    font-family:apple-system,BlinkMacSystemFont,segoe ui,roboto,oxygen,cantarell,helvetica neue,ubuntu,sans-serif;
-  }
-  .dropdown{
-    height: auto;
-    position: relative;
-    right: 100px;
-    display: inline-block;
-  }
-  .dropdown-content{
-    display: none;
-  position: absolute;
-  right:0px;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
-  z-index: 1;
-  }
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  .drop-down-div{
-    float: right;
-  }
-  .title-tab-container{
+    gap: 10px 10px;
+    margin: 0px 5px 0px 5px;
+    padding: 0px 5px 0px 5px;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 200px; }
+
+  .image img {
     width: 100%;
-    height: 50px;
-  }
-  .dropdown-content a{
-    text-decoration: none;
-    color: #1a1a1a;
-  }
+    height: 100px; } }
+@media screen and (max-width: 600px) {
+  .grid-container {
+    display: grid;
+    gap: 10px 10px;
+    margin: 0px 5px 0px 5px;
+    padding: 0px 5px 0px 5px;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 200px; }
+
+  .image img {
+    width: 100%;
+    height: 350px; } }
+@media screen and (min-width: 768px) {
+  .grid-container {
+    display: grid;
+    gap: 25px 25px;
+    margin: 0px 40px 0px 40px;
+    padding: 0px 40px 0px 40px;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 200px; }
+
+  .image img {
+    width: 100%;
+    height: 650px; } }
+
+/*# sourceMappingURL=main.css.map */
